<resources>
    <string name="app_name">orama-api-consumer</string>
    <string name="minimum_initial_application_amount">Aplicação Mínima</string>
    <string name="fund_volatility_12_month_time_mark">(12m)</string>
    <string name="fund_profitability_label">Rentabilidade</string>
    <string name="fund_volatility_12_months">Volatilidade em 12 meses:</string>
    <string name="fund_simplicity_yes">Sim</string>
    <string name="fund_simplicity_no">Não</string>
    <string name="fund_detail_simplicity_label">É simples?</string>
    <string name="fund_minimum_initial_application_amount">Aplicação mínima:</string>
    <string name="fund_specification">Especificações</string>
    <string name="fund_main_strategy">Principal estratégia:</string>
    <string name="fund_suitable_profile">Perfil adequado:</string>
    <string name="fund_class">Classe do fundo:</string>
    <string name="fund_class_anbima">Anbima da classe:</string>
    <string name="fund_objective">Objetivo do fundo</string>
    <string name="fund_profitability_today_label">Hoje:</string>
    <string name="fund_profitability_this_month_label">Este mês:</string>
    <string name="fund_profitability_this_year_label">Este ano:</string>
    <string name="fund_profitability_last_twelve_months_label">Últimos 12 meses:</string>
    <string name="fund_profitability_last_two_years_label">Últimos 2 anos:</string>
    <string name="fund_profitability_last_three_years_label">Últimos 3 anos:</string>
    <string name="fund_profitability_last_four_years_label">Últimos 4 anos:</string>
    <string name="fund_profitability_last_five_years_label">Últimos 5 anos:</string>
    <string name="fund_listing_toolbar_title">Fundos</string>
    <string name="fund_cardview_data_right_half_minimum_application_monetary_sign">R$</string>
    <string name="fragment_fund_detail_minimum_initial_application_monetary_unity">R$</string>
    <string name="fragment_fund_detail_about_the_manager_label">Sobre a administradora</string>

</resources>