<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="specification"
            type="com.maximo.douglas.oramaapiconsumer.domain.entity.fund.specification.Specification" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/fund_specification_main_strategy_name_linear_layout"
            visibleOrGone="@{specification.fundMainStrategyName != null}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fund_specification_main_strategy_label_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fund_main_strategy"
                android:textColor="@color/green"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fund_specification_main_strategy_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@{specification.fundMainStrategyName}"
                android:textColor="@color/gray_700"
                android:textSize="14sp"
                tools:text="-0.001257" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fund_specification_suitability_profile_linear_layout"
            visibleOrGone="@{specification.fundSuitabilityProfile != null}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fund_specification_suitability_profile_label_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fund_suitable_profile"
                android:textColor="@color/green"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fund_specification_suitability_profile_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@{specification.fundSuitabilityProfile.name}"
                android:textColor="@color/gray_700"
                android:textSize="14sp"
                tools:text="-0.001257" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fund_specification_class_linear_layout"
            visibleOrGone="@{specification.fundClass != null}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fund_specification_class_label_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fund_class"
                android:textColor="@color/green"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fund_specification_class_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@{specification.fundClass}"
                android:textColor="@color/gray_700"
                android:textSize="14sp"
                tools:text="-0.001257" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fund_specification_class_anbima_linear_layout"
            visibleOrGone="@{specification.fundClassAnbima != null}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fund_specification_class_anbima_label_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fund_class_anbima"
                android:textColor="@color/green"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fund_specification_class_anbima_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@{specification.fundClassAnbima}"
                android:textColor="@color/gray_700"
                android:textSize="14sp"
                tools:text="Fundos que podem investir mais de 40% do seu patrimônio líquido em ativos financeiros no exterior." />
        </LinearLayout>

    </LinearLayout>
</layout>