<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="fund"
            type="com.maximo.douglas.oramaapiconsumer.domain.entity.fund.Fund" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/fund_cardview"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="6dp"
        app:cardCornerRadius="6dp"
        app:strokeColor="@color/gray_500"
        app:strokeWidth="1dp">

        <LinearLayout
            android:id="@+id/fund_cardview_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/fund_cardview_teal_label"
                visibleOrGone="@{fund.isSimple}"
                android:layout_width="8dp"
                android:layout_height="match_parent"
                android:background="@color/teal_500"
                tools:background="@color/teal_500" />

            <ImageView
                android:id="@+id/fund_cardview_red_label"
                visibleOrGone="@{!fund.isSimple}"
                android:layout_width="8dp"
                android:layout_height="match_parent"
                android:background="@color/red"
                tools:background="@color/red"
                tools:visibility="gone" />

            <LinearLayout
                android:id="@+id/fund_cardview_data_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/fund_cardview_data_simple_name_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@{fund.simpleName}"
                    android:textAlignment="center"
                    android:textColor="?attr/colorSecondary"
                    android:textStyle="bold"
                    tools:text="Meta Plus FIM" />

                <LinearLayout
                    android:id="@+id/fund_cardview_data_right_half_linear_layout"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="0.5"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/fund_cardview_data_right_half_volatility_value_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:text="@{fund.formattedVolatility12m}"
                            android:textColor="?attr/colorPrimaryDark"
                            tools:text="18.35%" />

                        <TextView
                            android:id="@+id/fund_cardview_data_right_half_volatility_12m_label_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="6dp"
                            android:text="@string/fund_volatility_12_month_time_mark"
                            android:textColor="?attr/colorPrimaryDark" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/fund_cardview_data_right_half_minimum_application_amount_label_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/minimum_initial_application_amount"
                        android:textColor="?attr/colorPrimaryDark"
                        tools:text="Aplicação mínima" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/fund_cardview_data_right_half_minimum_application_rs_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:text="@string/fund_cardview_data_right_half_minimum_application_monetary_sign"
                            android:textColor="?attr/colorPrimaryDark" />

                        <TextView
                            android:id="@+id/fund_cardview_data_right_half_minimum_application_amount_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="6dp"
                            android:text="@{fund.operability.minimumInitialApplicationAmount}"
                            android:textColor="?attr/colorPrimaryDark"
                            tools:text="5000,00" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>